# AIwerewolf

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  REQUIREMENTS.md  SKILLS.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  test_webapp.py
.github/: PULL_REQUEST_TEMPLATE.md
backend/: __init__.py  app.py  run_demo.py
configs/: demo.yaml  discrimination_strategies.yaml  discrimination_strategies_iter3.yaml  rule_variant_standard.yaml  seed_strategies.json  strategy_library.yaml
docs/: ARCHITECTURE.md  B_C_OPERATIONAL_REPORT.md  DATA_FLOW.md  DEVELOPMENT_ISSUES.md  DOC_INDEX.md  ENGINEERING_ARCHITECTURE.md  EXPERIMENT_DATA_FIX_REPORT.md  EXPERIMENT_SECTION_DESIGN.md  FINAL_DELIVERY_PACKAGE.md  FINAL_SHOWCASE_REPORT.md  FORMAL_V4FLASH_FRAMEWORK_ANALYSIS.md  FULL_SCORE_EXPERIMENT_AUDIT.md  PRODUCT_INTRO.md  PROJECT_CLOSURE_FACTS.json  PROJECT_DESIGN_HISTORY.md  PROJECT_EFFECT_ANALYSIS.md  PROJECT_FINAL_FACTS.json  PROJECT_FINAL_FIGURES.md  PROJECT_FINAL_REPORT_DRAFT.md  PROJECT_METHOD_EFFECTIVENESS_EXPERIMENTS.md  PROJECT_METHOD_EFFECTIVENESS_FACTS.json  PROJECT_MODULE_DESIGN.md  PROJECT_PROVIDER_PREFLIGHT.json  PROJECT_REAL_LLM_FRAMEWORK_EVIDENCE.md  PROJECT_REFERENCES.md  PROJECT_ROLE_RETRIEVAL_QUANTIFICATION.md  PROJECT_STATUS.md  PROJECT_TARGET_SEAT_TRACKC_PILOT.md  PROJECT_TRACK_B_LEADERBOARD_SHOWCASE.json  PROJECT_TRACK_B_LEADERBOARD_SHOWCASE.md  README.md  TRACK_C_HERMES_LLM_WIKI_DESIGN.md  WORKFLOW_BUGS_2026-06-06.md  architecture_audit_20260604.md  backend_acceptance_criteria.md  backend_user_journey.md  experiment_protocol.md  interview-master-guide.md  pairwise_ranker_debug_report.md  plan-speech-sync-fix.md  (+27 more)
frontend/: .env.example  .gitignore  Dockerfile  README.md  app.js  eslint.config.mjs  index.html  middleware.ts  next.config.js  package-lock.json  package.json  style.css  tailwind.config.ts  tsconfig.json
nginx/: default.conf
plans/: 1-2-image-3-skill-witty-treehouse.md
prototype/: index.html  script.js  styles-new.css  styles.css
scripts/: analyze_formal_experiment_results.py  analyze_mbti.py  analyze_mbti_track_c_results.py  analyze_method_effectiveness_statistics.py  analyze_my_batch.py  analyze_profile_speech_semantics.py  analyze_reranker_failure.py  analyze_score_distributions.py  analyze_strategy_usage_decision_scores.py  audit_track_b_open_datasets.py  auto_promote.py  batch_experiment.py  bc_quantify.py  bc_repair_loop_check.py  bench_optimizations.py  build_dashboard_data.py  build_human_pairwise_queue.py  build_minimal_leaderboard.py  build_rubric_demo.py  build_single_game_report_data.py  build_strategy_graph.py  build_track_b_open_dataset.py  build_track_b_open_datasets.py  c_real_llm_ab_validation.py  capture_closure_screenshots.js  check_real_llm_provider.py  (+130 more)
(+443 files in other folders)
